# CR-CA

./: CRCA.py  README.md  __init__.py  pyproject.toml  requirements.txt
branches/: CRCA-Q.py
branches/crca_cg/: corposwarm.py
branches/crca_sd/: CRCA_INTEGRATION.md  TUI_README.md  crca_sd_mpc.py
branches/general_agent/: general_agent.py
crca_core/: __init__.py
crca_core/core/: __init__.py  api.py  estimate.py  lifecycle.py
crca_core/identify/: __init__.py
crca_core/models/: __init__.py  refusal.py  result.py  spec.py
crca_core/scm/: __init__.py  linear_gaussian.py
crca_llm/: __init__.py  orchestrator.py
crca_reasoning/: tool_router.py
docs/: mkdocs.yml
docs/css/: custom.css
docs/stylesheets/: extra.css
prompts/: general_agent.py
scripts/: run_full_finetune.py
tools/bolt.diy/app/components/observability/: GovernorMetrics.tsx  LogStream.tsx
tools/bolt.diy/app/routes/: _index.tsx  api.mandate.ts  execute.$mandateId.tsx
tools/bolt.diy/app/types/: mandate.ts
tools/bolt.diy/lib/governance/: causal-analysis.ts  corporate-swarm-client.ts  hooks.ts
tools/bolt.diy/lib/runtime/: action-runner.ts  event-stream.ts  execution-events.ts  mandate-executor.ts
tools/bolt.diy/lib/webcontainer/: index.ts
tools/bolt.diy/services/execution-governor/: README.md  package-lock.json  pnpm-lock.yaml
tools/bolt.diy/services/headless-executor/: README.md  pnpm-lock.yaml
training/: __init__.py  deepspeed_zero3_offload.json  finetune.py
utils/: agent_discovery.py
webui/static/css/: style.css
webui/static/js/: main.js
webui/templates/: index.html
(+3 files in other folders)
